# fractal-ilastik-tasks

./: .copier-answers.yml  .gitignore  README.md  create_env_script.sh  pyproject.toml
.github/workflows/: build_and_test.yml
src/ilastik_tasks/: __FRACTAL_MANIFEST__.json  __init__.py  ilastik_pixel_classification_segmentation.py  thresholding_label_task.py
src/ilastik_tasks/dev/: create_manifest.py  task_list.py
tests/: __init__.py  test_ilastik_pixel_classification_segmentation.py  test_thresholding_label_task.py  test_valid_args_schemas.py
tests/data/: pixel_classifier_2D.ilp
tests/data/ngff_example/my_image/labels/: .zattrs
tests/data/ngff_example/my_image/labels/label_DAPI/: .zattrs
tests/data/ngff_example/my_image/labels/label_DAPI/0/0/0/: 0
tests/data/ngff_example/my_image/labels/label_DAPI/1/0/0/: 0
