# https://peps.python.org/pep-0517/
[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

# https://hatch.pypa.io/latest/config/metadata/
[tool.hatch.version]
#path = "src/ilastik_tasks/__init__.py"
source = "vcs"

# read more about configuring hatch at:
# https://hatch.pypa.io/latest/config/build/
[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]

# Always include the __FRACTAL_MANIFEST__.json file in the package
[tool.hatch.build]
include = ["__FRACTAL_MANIFEST__.json"]


# Project metadata (see https://peps.python.org/pep-0621)
[project]
name = "ilastik-tasks"
dynamic = ["version"]
description = "Package description."
readme = "README.md"
license = { text = "BSD-3-Clause" }
authors = [
    { name = "Lorenzo Cerrone", email = "lorenzo.cerrone@uzh.ch" },
]

# Required Python version and dependencies
requires-python = ">=3.9"
dependencies = ["fractal-tasks-core == 1.3.0", "scikit-image"]

# Optional dependencies (e.g. for `pip install -e ".[dev]"`, see
# https://peps.python.org/pep-0621/#dependencies-optional-dependencies)
[project.optional-dependencies]
dev = ["devtools", "hatch", "pytest", "requests", "jsonschema", "ruff", "pre-commit"]

# https://docs.astral.sh/ruff
[tool.ruff]
line-length = 88
target-version = "py39"
src = ["src"]

# https://docs.astral.sh/ruff/rules
[tool.ruff.lint]
pydocstyle = { convention = "google" }
select = [
    "E",    # style errors
    "W",    # style warnings
    "F",    # flakes
    "D",    # pydocstyle
    "D417", # Missing argument descriptions in Docstrings
    "I",    # isort
    "UP",   # pyupgrade
    "C4",   # flake8-comprehensions
    "B",    # flake8-bugbear
    "A001", # flake8-builtins
    "RUF",  # ruff-specific rules
    "TCH",  # flake8-type-checking
    "TID",  # flake8-tidy-imports
]
ignore = [
    "D401", # First line should be in imperative mood (remove to opt in)
    "D415", # First line should end with a period (remove to opt in)
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["D", "S"]

# https://docs.astral.sh/ruff/formatter/
[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 89
skip-magic-trailing-comma = false  # default is false